--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ description: >- # this means to ignore newlines until "baseurl:"
  Copyright (c) 2018 BlockchainOS.org All Rights Reserved.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://bosnet.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: "twitter.com/boscoinio"
-github_username: "github.com/bosnet"
+twitter_username: "boscoinio"
+github_username: "bosnet"
 
 # Build settings
 markdown: kramdown
