--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+timezone: Asia/Seoul
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
